sixth commit twitter data fetched for income and expense keyword

--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 MIEA : Monthly Income Expense Application
 
-It is a simple application to store income and expense and see the balance book. Still many changes are underway.
+It is a simple application to store income and expense and see the balance book.
+Still many changes are underway.
 
 CSS Designed by - Free CSS Templates - taken from http://www.freelayouts.com/
 
